# flexps-paper-version

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
base/: CMakeLists.txt  hash.hpp
bench/: kvstore.cpp
cluster_manager/: CMakeLists.txt  cluster_manager.cpp  cluster_manager.hpp  cluster_manager_connection.hpp  cluster_manager_context.hpp  scheduler_trigger.cpp  scheduler_trigger.hpp  scheduler_trigger_ml_unittest.cpp  task_scheduler.hpp
cluster_manager/task_scheduler/: CMakeLists.txt  auto_parallelism_task_scheduler.cpp  auto_parallelism_task_scheduler.hpp  available_workers.cpp  available_workers.hpp  greedy_task_scheduler.cpp  greedy_task_scheduler.hpp  history_manager.cpp  history_manager.hpp  priority_task_scheduler.cpp  priority_task_scheduler.hpp  priority_task_scheduler_ml_unittest.cpp  sequential_task_scheduler.cpp  sequential_task_scheduler.hpp  sequential_task_scheduler_ml_unittest.cpp  task_manager.cpp  task_manager.hpp  task_manager_ml_unittest.cpp  task_scheduler.hpp  task_scheduler_utils.cpp  task_scheduler_utils.hpp
conf/: minimum.conf  minimum.master.conf
core/: CMakeLists.txt  assigner.hpp  cluster.hpp  color.hpp  config.cpp  constants.hpp  context.cpp  context.hpp  info.cpp  info.hpp  info_ml_unittest.cpp  instance.cpp  instance.hpp  instance_manager.hpp  mailbox.cpp  main_loop.hpp  master.hpp  master_connection.hpp  table_info.hpp  task.hpp  utility.hpp  worker_info.cpp  worker_info.hpp
core/common/: CMakeLists.txt  config.cpp  config.hpp  constants.hpp  context.cpp  context.hpp  hash_ring.cpp  info.hpp  instance.hpp  mailbox.cpp  mailbox.hpp  network.cpp  task.hpp  utility.cpp  utility.hpp  worker_info.cpp  worker_info.hpp  zmq_helpers.hpp
core/master/: cluster_manager.hpp  master.hpp  master_connection.hpp  task_manager.hpp  task_scheduler.hpp  workers_pool.hpp
core/worker/: CMakeLists.txt  driver.hpp  info.hpp  instance_manager.hpp  instance_runner.hpp  main_loop.hpp  master_connector.hpp  task_store.hpp  utility.cpp  utility.hpp  worker.hpp
datastore/: batch_data_sampler.hpp  batch_data_sampler_ml_unittest.cpp  data_iterator.hpp  data_iterator_ml_unittest.cpp  data_load_balance.hpp  data_load_balance_ml_unittest.cpp  data_sampler.hpp  data_sampler_ml_unittest.cpp  data_store_wrapper.hpp  datastore.hpp  datastore_utils.hpp
examples/: CMakeLists.txt  ClusterManagerMain.cpp  ClusterManagerMainWithContext.cpp  MasterMain.cpp  MasterMainWithContext.cpp  ProcMain.cpp  ProcMainWithContext.cpp  ProcMainWithContextDriver.cpp  als.cpp  als_shared.cpp  auto_parallelism_task.cpp  debug.cpp  generic_ml.cpp  kmeans.cpp  kmeans_helper.hpp  kmeans_multi_stage.cpp  logistic_regression.cpp  logistic_regression_generic.cpp  logistic_regression_samplereader.cpp  logistic_regression_simplesr.cpp  logistic_regression_svrg.cpp  lr_updater.hpp  mf_sgd.cpp  multi_ml.cpp  pi.cpp  sample_reader.cpp  sample_reader.hpp  simple_hogwild.cpp  simple_kv_app.cpp  simple_kvstore.cpp  spmt_ps_compare.cpp  svm_updater.hpp  test_chunk.cpp  test_configurableTask.cpp  test_data_sampler.cpp  test_datastore.cpp  test_fixedworkers.cpp  test_globalize.cpp  test_greedy_task_scheduler.cpp  test_kv_app.cpp  (+7 more)
examples/kmeans/: CMakeLists.txt  kmeans.conf  kmeans.cpp  kmeans_helper.hpp  kmeans_multi_stage.cpp  kmeans_multi_stage_auto_parallelism.cpp  mnist8m.conf  sensit.conf  svhn.conf
examples/lda/: CMakeLists.txt  doc_sampler.cpp  doc_sampler.hpp  lda_doc.hpp  lda_doc_ml_unittest.cpp  lda_main.cpp  lda_stat.cpp  lda_stat.hpp  pslda.ini
examples/mf_als/: CMakeLists.txt  als.conf  als.cpp  als_shared.cpp
examples/mf_sgd/: CMakeLists.txt  mf_sgd.conf  mf_sgd.cpp
exp/: CMakeLists.txt  auto_elastic_ps.cpp  elastic_ps.cpp  logistic_regression_svrg.cpp  lrsvrg.cpp  multi_tasks_exp.cpp  multi_tasks_lr_exp.cpp  num_threads_tuning.cpp  parameter_tuning.cpp  read_local_global.cpp  read_train.cpp  svrg_helper.hpp
exp/elastic_ps/: CMakeLists.txt  auto_chunk_elastic_ps.cpp  auto_chunk_elastic_ps.ini  auto_elastic_ps.cpp  auto_elastic_ps.ini  chunk_elastic_ps.cpp  chunk_elastic_ps.ini  elastic_ps.cpp  elastic_ps.ini
exp/sgd_hogwild/: CMakeLists.txt  sgd_hogwild.conf  sgd_hogwild.cpp
exp/stage_transition/: CMakeLists.txt  README.md  stage_transition.conf  stage_transition.cpp
exp/svrg/: CMakeLists.txt  auto_chunk_svrg.cpp  auto_chunk_svrg.ini  auto_svrg.cpp  auto_svrg.ini  chunk_svrg.cpp  chunk_svrg.ini  configurable_lrsvrg.cpp  lrsvrg.cpp  lrsvrg.ini  svrg.cpp  svrg.hpp  svrg.ini  svrg_helper.hpp
husky/: CMakeLists.txt
husky/core/: CMakeLists.txt  attrlist.hpp  objlist.hpp  objlist_factory.cpp  objlist_factory.hpp
io/: hdfs_assigner_ml.hpp  hdfs_binary_assigner_ml.hpp
kvstore/: CMakeLists.txt  kvmanager.hpp  kvpairs.hpp  kvstore.cpp  kvstore.hpp  kvstore_manager.hpp  kvstore_ml_unittest.cpp  kvworker.hpp  range_manager.cpp  range_manager.hpp  range_manager_ml_unittest.cpp  servercustomer.cpp  servercustomer.hpp  workercustomer.cpp  workercustomer.hpp
lib/: app_config.hpp  data_sampler.hpp  load_data.hpp  lr_test_utils.hpp  lr_updater.hpp  ml_lambda.hpp  objectives.hpp  optimizers.hpp  sample_reader.hpp  sample_reader_parse.hpp  svm_updater.hpp  task_utils.hpp  utils.hpp
master/: cluster_manager.hpp  master.hpp  master_connection.hpp  task_scheduler.hpp
ml/: ml.hpp
scripts/: clang-format.py
test/: CMakeLists.txt  test_binary_sampler_reader.cpp  test_configurableTask.cpp  test_data_sampler.cpp  test_direct_model_transfer.cpp  test_greedy_task_scheduler.cpp  test_init_consistency_control.cpp  test_kmeans.cpp  test_kvstore.cpp  test_load_dump.cpp  test_load_ml.cpp  test_migrate.cpp  test_model.cpp  test_pi.cpp  test_sample_reader.cpp
worker/: CMakeLists.txt  basic.hpp  cluster_manager_connector.hpp  driver.hpp  engine.cpp  engine.hpp  instance_runner.cpp  instance_runner.hpp  master_connector.hpp  model_transfer_manager.cpp  model_transfer_manager.hpp  model_transfer_manager_ml_unittest.cpp  model_transfer_store.cpp  model_transfer_store.hpp  model_transfer_store_ml_unittest.cpp  task_factory.hpp  task_store.hpp  unit.hpp  worker.cpp  worker.hpp
(+76 files in other folders)
